[package]
name = "wasm-multiplayer"
version = "0.1.0"
edition = "2021"

[lints.rust]
dead_code = "allow"
unused_imports = "allow"
deprecated = "allow"
unused_variables = "allow"
unused_mut = "allow"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = [
  "CanvasRenderingContext2d",
  "Document", 
  "Element", 
  "HtmlCanvasElement", 
  "Window", 
  "console", 
  "MouseEvent", 
  "WebSocket",
  "MessageEvent",
  "BinaryType",
  "DomRect",
  "Event",
  "CloseEvent"
]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
